# gov-contracts

./: .gitignore  Cargo.toml  README.md  cli.txt  cmd.txt  demo.txt  fix.txt
.circleci/: config.yml
.github/workflows/: rust-clippy.yml
artifacts/: Governance.wasm  checksums.txt  checksums_intermediate.txt  governance-aarch64.wasm
contracts/gov-locker/: Cargo.toml
contracts/gov-locker/examples/: schema.rs
contracts/gov-locker/schema/: instantiate_msg.json  state.json
contracts/gov-locker/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/governance/: Cargo.toml  README.md
contracts/governance/examples/: schema.rs
contracts/governance/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/governance/src/: coin_helpers.rs  contract.rs  error.rs  integration_test.rs  lib.rs  msg.rs  state.rs  validation.rs
contracts/governance/src/common/: mod.rs
scripts/: check_workspace.sh  contract_full.sh  publish.sh  set_version.sh  test_workspace.sh
